sync: 同步 main 156bac1 的架构重构并适配 1.21.1